<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/dialog_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogWarning"
        android:textColor="@color/text_color"
        android:textSize="25dp"
        android:fontFamily="sans-serif-condensed"
        android:id="@+id/dialogWarning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke"
        android:layout_marginTop="45dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogMessage"
        android:textColor="@color/text_color"
        android:textSize="18dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="10dp"
        android:id="@+id/dialogMessage"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/dialogWarning"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@+id/dialogMessage">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/okButton"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:textSize="18dp"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/buttonAccept"
            android:background="@drawable/dialog_button"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cancelButton"
            android:textColor="@color/text_color"
            android:layout_weight="1"
            android:textSize="18dp"
            android:fontFamily="sans-serif-condensed"
            android:background="@drawable/dialog_button"
            android:id="@+id/buttonCancel" />
    </LinearLayout>
</RelativeLayout>